--- a/src/content-script/index.scss
+++ b/src/content-script/index.scss
@@ -6,4 +6,5 @@
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 -1px 0px rgba(0, 0, 0, 0.02);
   background-color: #fff;
+  display: none;
 }
